// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Given status is "connected" should match snapshot 1`] = `
.c0 {
  background-color: #65db25;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 4px;
  padding: 8px;
  font-size: 12px;
}

<div
  class="c0"
  data-testid="status-container"
  status="connected"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-testid="signal-on"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M17 4h3v16h-3zM5 14h3v6H5zm6-5h3v11h-3z"
    />
  </svg>
</div>
`;

exports[`Status Given status is "disconnected" should match snapshot 1`] = `
.c0 {
  background-color: #eb4034;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 4px;
  padding: 8px;
  font-size: 12px;
}

<div
  class="c0"
  data-testid="status-container"
  status="disconnected"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root"
    data-testid="signal-off"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M21 1l-8.59 8.59L21 18.18V1zM4.77 4.5L3.5 5.77l6.36 6.36L1 21h17.73l2 2L22 21.73 4.77 4.5z"
    />
  </svg>
</div>
`;
